src/backend/cuda/test/snapshots/context_jit__backend__cuda__test__codegen__scatter.snap
---
source: src/backend/cuda/test/codegen.rs
expression: asm
---
// VarId(0)[VarId(2)] <- VarId(1):
	ld.global.u64 %rd0 [params+8]
	mad.wide.u8 %rd3, %r2, 1, %rd0;
	st.global.u8 [%rd3], %b1;

